--- a/sample/SampleApp/SampleApp/SampleApp.csproj
+++ b/sample/SampleApp/SampleApp/SampleApp.csproj
@@ -66,6 +66,9 @@
       <HintPath>..\..\packages\Xamarin.Forms.1.5.0.6446\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="XamarinFormsAutofacMvvmStarterKit">
+      <HintPath>..\..\..\src\XamarinFormsAutofacMvvmStarterKit\bin\Debug\XamarinFormsAutofacMvvmStarterKit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -75,12 +78,6 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\XamarinFormsAutofacMvvmStarterKit\XamarinFormsAutofacMvvmStarterKit.csproj">
-      <Project>{dd8df24c-0871-41a7-805c-bc2928869abe}</Project>
-      <Name>XamarinFormsAutofacMvvmStarterKit</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
