--- a/sample/SampleApp/SampleApp/packages.config
+++ b/sample/SampleApp/SampleApp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xamarin.Forms" version="1.5.0.6446" targetFramework="portable45-net45+win8+wp8" />
+  <package id="XamarinFormsAutofacMvvmStarterKit" version="0.1.5755.38852" targetFramework="portable45-net45+win8+wp8" />
 </packages>
