--- a/src/XamarinFormsAutofacMvvmStarterKit.UnitTests/packages.config
+++ b/src/XamarinFormsAutofacMvvmStarterKit.UnitTests/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
-  <package id="Autofac.Extras.Moq" version="3.1.0" targetFramework="net452" />
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net452" />
-  <package id="NUnit" version="2.6.4" targetFramework="net452" />
+  <package id="Autofac.Extras.Moq" version="4.0.0" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Moq" version="4.5.16" targetFramework="net452" />
+  <package id="NUnit" version="3.4.1" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
-  <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="net452" />
+  <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="net452" />
 </packages>
